fix(mobile): remove important from display of nav-item to respect role access visibility

--- a/style.css
+++ b/style.css
@@ -1448,7 +1448,7 @@ body {
   }
   .nav-item {
     flex: 0 0 68px !important;
-    display: flex !important;
+    display: flex;
     flex-direction: column !important;
     justify-content: center !important;
     align-items: center !important;
